#N/A: Fix web app on iphone

--- a/mrw-web/resources/public/main.css
+++ b/mrw-web/resources/public/main.css
@@ -25,7 +25,7 @@ a:hover {
 }
 
 .reaction {
-    min-width: 400px;
+    min-width: 320px;
     padding: 15px;
     margin-top: 15px;
 }
@@ -36,11 +36,11 @@ a:hover {
 }
 
 #container {
-    min-width: 400px;
+    min-width: 320px;
 }
 
 #container iframe, #container blockquote {
-    min-width: 400px;
+    min-width: 320px;
 }
 
 .search-field {
